--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 * {
-    background: rgb(255, 255, 255);
+    background: rgb(0, 0, 0);
     font-size: 22px;
     line-height: 150%;
     color: rgb(122, 172, 21)
@@ -42,7 +42,7 @@ textarea {
     }
 
 .mensagem {
-        background: rgb(11, 11, 11);
+        background: gray;
         background-image: url(/Imagens/loading.jpg);
         background-repeat: no-repeat;
         background-position: center;
@@ -96,6 +96,6 @@ textarea {
 
 button:hover {
     transform: scale(1.1);
-    background-color: rgb(255, 255, 255);  
+    background-color: gray;  
 }
 
