--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 * {
-    background: rgb(0, 0, 0);
+    background: black;
     font-size: 22px;
     line-height: 150%;
-    color: rgb(122, 172, 21)    
+    color: rgb(122, 172, 21)
+    
 }
 
 .logo {   
@@ -24,12 +25,14 @@ textarea {
     color: rgb(122, 172, 21);
     margin-top: 30px;
     padding-left: 10px;
-    text-transform: lowercase;    
+    text-transform: lowercase;
+    
 }
 
 ::placeholder {color: rgb(122, 172, 21);}
     .text-area:focus {
-        outline: none;       
+        outline: none;
+       
     }
 
     h6 {
@@ -40,7 +43,7 @@ textarea {
 
 .mensagem {
         background: gray;
-        background-image: url(/Imagens/loading.jpg);
+        background-image: url(./Imagens/loading.jpg);
         background-repeat: no-repeat;
         background-position: center;
         background-size: 10%;
@@ -95,4 +98,3 @@ button:hover {
     transform: scale(1.1);
     background-color: gray;  
 }
-
