--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 * {
-    background: rgb(0, 0, 0);
+    background: black;
     font-size: 22px;
     line-height: 150%;
     color: rgb(122, 172, 21)    
@@ -29,7 +29,8 @@ textarea {
 
 ::placeholder {color: rgb(122, 172, 21);}
     .text-area:focus {
-        outline: none;       
+        outline: none;
+       
     }
 
     h6 {
@@ -40,7 +41,7 @@ textarea {
 
 .mensagem {
         background: gray;
-        background-image: url(/Imagens/loading.jpg);
+        background-image: url(./Imagens/loading.jpg);
         background-repeat: no-repeat;
         background-position: center;
         background-size: 10%;
@@ -48,7 +49,6 @@ textarea {
         color: rgb(122, 172, 21);
         margin-left: 100px;      
         padding: 10 10;
-        position: fixed;
         width: 500px;
         height: 350px;      
 }
@@ -78,14 +78,14 @@ textarea {
     width: 220px;
 }
 
-.botao-copiar {
+.btn-copiar {
     background: black;
     border: 2px solid;
     border-radius: 10px;
     cursor: pointer;
     height: 50px;
     margin-left: 200px;
-    margin-top: 490px;
+    margin-top: 95px;
     position: absolute;
     width: 300px;
     background-position: center;
@@ -96,3 +96,7 @@ button:hover {
     background-color: gray;  
 }
 
+.copyright {
+    text-align: center;
+    padding-top: 70px;
+}
